force-app/main/default/objects/IMPAX__c/IMPAX__c.object-meta.xml
<CustomObject>
    <description>Contains information record by Wealth Management from prospects and existing customers - aligns with the Bank&#39;s strategy on IMPAX sales techniques</description>
    <label>IMPAX</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>IMPAX Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IMPAX</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>