force-app/main/default/objects/IMPAX__c/fields/Assessment_Total_30_to_110__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Total_30_to_110__c</fullName>
    <formula>Can_we_win_25_to_65__c + Is_it_worth_Pursuing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Total (-30 to 110)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>