force-app/main/default/objects/IMPAX__c/fields/Budget_Asset_Availability__c.field-meta.xml
<CustomField>
    <fullName>Budget_Asset_Availability__c</fullName>
    <label>Budget/Asset Availability (0 to 10)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>