force-app/main/default/objects/IMPAX__c/fields/Can_we_win_25_to_65__c.field-meta.xml
<CustomField>
    <fullName>Can_we_win_25_to_65__c</fullName>
    <formula>Client_Urgency_0_to_10__c  +  Future_Referral_Potential_0_to_10__c + Quality_of_Information__c + Stakeholder_Support_10_to_10__c + Relationship_Fit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can we win? (-25 to 65)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>