force-app/main/default/objects/IMPAX__c/fields/Client_Urgency_0_to_10__c.field-meta.xml
<CustomField>
    <fullName>Client_Urgency_0_to_10__c</fullName>
    <label>Client Urgency (0 to 10)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>