force-app/main/default/objects/IMPAX__c/fields/Concerns__c.field-meta.xml
<CustomField>
    <fullName>Concerns__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>