force-app/main/default/objects/IMPAX__c/fields/Follow_Up_Items__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Items__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow Up Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>