force-app/main/default/objects/IMPAX__c/fields/Future_Case_Size_0_to_10__c.field-meta.xml
<CustomField>
    <fullName>Future_Case_Size_0_to_10__c</fullName>
    <label>Future Case Size (0 to 10)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>