force-app/main/default/objects/IMPAX__c/fields/Is_it_worth_Pursuing__c.field-meta.xml
<CustomField>
    <fullName>Is_it_worth_Pursuing__c</fullName>
    <formula>Solution_Fit__c  +  Current_Case_Size_0_to_10__c  +  Future_Case_Size_0_to_10__c  +  Budget_Asset_Availability__c  +  Logistics_5_to_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is it worth Pursuing (-5 to 45)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>