force-app/main/default/objects/IMPAX__c/fields/Logistics_5_to_5__c.field-meta.xml
<CustomField>
    <fullName>Logistics_5_to_5__c</fullName>
    <label>Logistics (-5 to 5)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>