force-app/main/default/objects/IMPAX__c/fields/Outside_Assets__c.field-meta.xml
<CustomField>
    <fullName>Outside_Assets__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outside Assets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>