force-app/main/default/objects/IMPAX__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>