force-app/main/default/objects/IMPAX__c/fields/Quality_of_Information__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Information__c</fullName>
    <label>Quality of Information (-5 to 15)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>