force-app/main/default/objects/IMPAX__c/fields/Relationship_Fit__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Fit__c</fullName>
    <label>Relationship Fit (-10 to 20)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>