force-app/main/default/objects/IMPAX__c/fields/Solution_Fit__c.field-meta.xml
<CustomField>
    <fullName>Solution_Fit__c</fullName>
    <label>Solution Fit (0 to 10)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>