force-app/main/default/objects/IMPAX__c/fields/Stakeholder_Support_10_to_10__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Support_10_to_10__c</fullName>
    <label>Stakeholder Support (-10 to 10)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>